update link deploy

--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="sidebar html,css,javascript">
+    <meta name="keywords" content="Html, css, javascript">
+    <meta name="author" content="Miller Gutierrez">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sidebar Menu</title>
+    <!-- favicon -->
+    <link rel="shortcut icon" href="image/HTML_icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 
